--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,7 @@ body {
 	color: rgb(154, 154, 154);
 	font-size: 70px;
 	font-weight: 400;
+	animation: puff-in-center 0.3s ease-in;
 }
 
 @media (max-width: 700px) {
