--- a/styles.css
+++ b/styles.css
@@ -74,42 +74,6 @@ body {
 	animation: puff-in-center 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
 
-@media (max-width: 1600px) {
-	.circle {
-		border: 5px solid rgb(255, 255, 255);
-		width: 180px;
-		height: 180px;
-	}
-}
-@media (max-width: 1300px) {
-	.circle {
-		border: 5px solid rgb(255, 255, 255);
-		width: 150px;
-		height: 150px;
-	}
-}
-@media (max-width: 1000px) {
-	.circle {
-		border: 4px solid rgb(255, 255, 255);
-		width: 120px;
-		height: 120px;
-	}
-}
-@media (max-width: 700px) {
-	.circle {
-		border: 4px solid rgb(255, 255, 255);
-		width: 100px;
-		height: 100px;
-	}
-}
-@media (max-width: 400px) {
-	.circle {
-		border: 1px solid rgb(255, 255, 255);
-		width: 70px;
-		height: 70px;
-	}
-}
-
 .circle-event {
 	position: absolute;
 	width: 150px;
@@ -131,6 +95,47 @@ body {
 		puff-in-center 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
 
+@media (max-width: 1600px) {
+	.circle,
+	.circle-event {
+		border: 5px solid rgb(255, 255, 255);
+		width: 180px;
+		height: 180px;
+	}
+}
+@media (max-width: 1300px) {
+	.circle,
+	.circle-event {
+		border: 5px solid rgb(255, 255, 255);
+		width: 150px;
+		height: 150px;
+	}
+}
+@media (max-width: 1000px) {
+	.circle,
+	.circle-event {
+		border: 4px solid rgb(255, 255, 255);
+		width: 120px;
+		height: 120px;
+	}
+}
+@media (max-width: 700px) {
+	.circle,
+	.circle-event {
+		border: 4px solid rgb(255, 255, 255);
+		width: 100px;
+		height: 100px;
+	}
+}
+@media (max-width: 400px) {
+	.circle,
+	.circle-event {
+		border: 1px solid rgb(255, 255, 255);
+		width: 70px;
+		height: 70px;
+	}
+}
+
 @keyframes gradient {
 	0% {
 		background-position: 0% 0%;
@@ -145,6 +150,12 @@ body {
 	color: white;
 	font-size: 40px;
 	font-weight: 700;
+}
+
+@media (max-width: 700px) {
+	.score {
+		font-size: 20px;
+	}
 }
 
 .game-over {
